fix the overflow of the indexation line

--- a/assembl/static2/css/components/posts.scss
+++ b/assembl/static2/css/components/posts.scss
@@ -352,8 +352,8 @@ $deleted-post-border: 1px solid $light-grey !default;
   }
 
   .answer-form {
-    width: 100%;
-    margin: 0 20px;
+    width: 90%;
+    margin: auto;
     background-color: $white;
     border-top: 2px solid $white;
     border: 1px solid $first-color-light;
