--- a/assembl/static2/css/views/idea.scss
+++ b/assembl/static2/css/views/idea.scss
@@ -89,7 +89,6 @@
     cursor: pointer;
     color: $first-color;
     display: inline-block;
-    margin-bottom: -6px;
     position: relative;
     height: $post-space;
     border-left: 1px solid $first-color-light;
